Fixed conflicting URIs
